Fix for bug#13818 SHOW CREATE VIEW / TABLE and information_schema.views fail                   for invalid view  Permit SHOW CREATE VIEW, SHOW CREATE TABLE, and retrieval of metadata from  information_schema for invalid views